K8s Advance Part 1/Ingress-Controller/magical-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: magical-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: magical-nginx
