K8s Advance Part 1/Ingress-Controller/nginx-deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: nginx-official
